--- a/public/modules/users/views/settings/social-accounts.client.view.html
+++ b/public/modules/users/views/settings/social-accounts.client.view.html
@@ -1,6 +1,7 @@
 <section class="row" data-ng-controller="SettingsController">
 	<h3 class="col-md-12 text-center" data-ng-show="hasConnectedAdditionalSocialAccounts()">Connected social accounts:</h3>
-	<div class="col-md-12 text-center">
+	<p>Not available yet</p>
+	<!--<div class="col-md-12 text-center">
 		<div data-ng-repeat="(providerName, providerData) in user.additionalProvidersData" class="remove-account-container">
 			<img ng-src="/modules/users/img/buttons/{{providerName}}.png">
 			<a class="btn btn-danger btn-remove-account" data-ng-click="removeUserSocialAccount(providerName)">
@@ -8,7 +9,7 @@
 			</a>
 		</div>
 	</div>
-	<h3 class="col-md-12 text-center">Connect other social accounts:</h3>
+<h3 class="col-md-12 text-center">Connect other social accounts:</h3>
 	<div class="col-md-12 text-center">
 		<a href="/auth/facebook" data-ng-hide="isConnectedSocialAccount('facebook')" class="undecorated-link">
 			<img src="/modules/users/img/buttons/facebook.png">
@@ -25,5 +26,5 @@
 		<a href="/auth/github" data-ng-hide="isConnectedSocialAccount('github')" class="undecorated-link">
 			<img src="/modules/users/img/buttons/github.png">
 		</a>
-	</div>
+	</div>-->
 </section>
