--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,3 +1,6 @@
 <section data-ng-controller="HomeController">
-	<h1>Welcome to LinkyPasty</h1>
+	<div data-ng-if="authentication.user == false">
+		<h1>Welcome to LinkyPasty</h1>
+	</div>
+	<div data-ng-if="authentication.user" data-ng-include="'modules/linkies/views/list-linkies.client.view.html'"></div>
 </section>
