--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -18,3 +18,34 @@ body.ng-cloak
 {
 	display: block;
 }
+
+/*PAB*/
+
+body {
+	min-height: 100%;
+	background-image: url(https://images.unsplash.com/photo-1422513391413-ddd4f2ce3340?q=80&fm=jpg&s=162d068a636d945cd9d124af17387fbd);
+    -moz-background-size: cover;
+      -o-background-size: cover;
+         background-size: cover;
+}
+
+.herowrap {
+	color: white;
+}
+
+.welcome-text h1 {
+	font-size: 31px;
+}
+
+.welcome-text p {
+	font-size: 21px;
+}
+
+.herowrap {
+	margin-top: 50px;
+}
+
+.welcome-forms .form-group {
+	margin-left: 0;
+	margin-right: 0;
+}
