--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,6 +1,40 @@
 <section data-ng-controller="HomeController">
 	<div data-ng-if="authentication.user == false">
-		<h1>Welcome to LinkyPasty</h1>
+		<div class="row herowrap">
+			<div class="col-md-10 col-md-offset-1">
+				<div class="welcome-text col-md-8">
+					<h1>Welcome to LinkyPasty</h1>
+					<p>Tired of sending to yourself links in an email ? Save here your important links and open them from any device. Add titles and descriptions to easily identify them. Search them by number of clicks, date or categories.</p>
+				</div>
+				<div class="welcome-forms col-md-offset-1 col-md-3"  data-ng-controller="AuthenticationController">
+					<div class="signin-form">
+						<h2>Sign In</h2>
+							<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
+								<fieldset>
+									<div class="form-group">
+										<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
+									</div>
+									<div class="input-group">
+										<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
+										<span class="input-group-btn">
+							        <button class="btn btn-primary" type="submit">Go!</button>
+							      </span>
+									</div>
+									<div class="text-center form-group">
+
+									</div>
+									<div data-ng-show="error" class="text-center text-danger">
+										<strong data-ng-bind="error"></strong>
+									</div>
+								</fieldset>
+							</form>
+					</div>
+					<div class="signup-form">
+						<a href="/signup">Or register</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div data-ng-if="authentication.user" data-ng-include="'modules/linkies/views/list-linkies.client.view.html'"></div>
 </section>
