--- a/public/modules/linkies/views/list-linkies.client.view.html
+++ b/public/modules/linkies/views/list-linkies.client.view.html
@@ -17,7 +17,7 @@
 				<a class="btn" href="/#!/linkies/{{linky._id}}/edit">
 					<i class="glyphicon glyphicon-edit"></i>
 				</a>
-				<a class="btn" data-ng-click="remove();">
+				<a class="btn" data-ng-click="remove(linky);">
 					<i class="glyphicon glyphicon-trash"></i>
 				</a>
 			</div>
