--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,7 +1,9 @@
 <section data-ng-controller="HomeController">
 	<div data-ng-if="authentication.user == false">
-		<div class="row herowrap">
+		<div class="herowrap">
 			<div class="col-md-10 col-md-offset-1">
+				<img src="modules/core/img/brand/logo-min.png" alt="centered logo of linkypasty" class="logo-home center-block">
+				<div class="row">
 				<div class="welcome-text col-md-7">
 					<h1>Welcome to LinkyPasty</h1>
 					<p>Tired of sending to yourself links in an email ? Save here your important links and open them from any device. Add titles and descriptions to easily identify them. Search them by number of clicks, date or categories.</p>
@@ -33,6 +35,7 @@
 						<a href="/#!/signup">Or register</a>
 					</div>
 				</div>
+			</div>
 			</div>
 		</div>
 	</div>
