--- a/public/modules/linkies/views/list-linkies.client.view.html
+++ b/public/modules/linkies/views/list-linkies.client.view.html
@@ -2,6 +2,8 @@
 	<div class="page-header">
 		<h1>My linkies</h1>
 	</div>
+
+	<add-linky-button></add-linky-button>
 	<div class="list-group">
 		<div data-ng-repeat="linky in linkies" data-ng-href="#!/linkies/{{linky._id}}" class="list-group-item item-linky">
 			<small class="list-group-item-text pull-right">
