--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -44,7 +44,7 @@
 						<a href="/#!/settings/profile">My Profile</a>
 					</li>
 					<li data-ng-show="authentication.user">
-						<a href="/auth/signout">Signout</a>
+						<a href="/auth/signout">Sign Out</a>
 					</li>
 
 			</li>
