--- a/public/modules/linkies/css/linkies.css
+++ b/public/modules/linkies/css/linkies.css
@@ -9,3 +9,24 @@
 .list-group {
 	color: #333;
 }
+
+.add-linky {
+	text-align: center;
+}
+
+.add-linky a {
+	display: block;
+	line-height: 30px;
+	border: 1px solid;
+	margin-bottom: 10px;
+}
+
+.add-linky a:hover {
+	color: white;
+	display: block;
+	line-height: 30px;
+	border: 1px solid;
+	margin-bottom: 10px;
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.3);
+}
