--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -2,7 +2,7 @@
 	<div data-ng-if="authentication.user == false">
 		<div class="herowrap">
 			<div class="col-md-10 col-md-offset-1">
-				<img src="modules/core/img/brand/logo-min.png" alt="centered logo of linkypasty" class="logo-home center-block img-responsive">
+				<img src="modules/core/img/brand/logo-linkypasty.svg" alt="centered logo of linkypasty" class="logo-home center-block img-responsive">
 				<div class="row">
 				<div class="welcome-text col-md-7">
 					<h1>Welcome to LinkyPasty</h1>
