--- a/public/modules/linkies/views/list-linkies.client.view.html
+++ b/public/modules/linkies/views/list-linkies.client.view.html
@@ -2,32 +2,8 @@
 	<div class="page-header">
 		<h1>My linkies</h1>
 	</div>
-
 	<add-linky-button></add-linky-button>
-	<div class="list-group">
-		<div data-ng-repeat="linky in linkies" data-ng-href="#!/linkies/{{linky._id}}" class="list-group-item item-linky">
-			<small class="list-group-item-text pull-right">
-				Posted on
-				<span data-ng-bind="linky.created | date:'mediumDate'"></span>
-				by
-				<span data-ng-bind="linky.user.username"></span>
-			</small>
-			<h4 class="list-group-item-heading" data-ng-bind="linky.title"></h4>
-			<a href="{{linky.link}}" data-ng-bind="linky.link" target="_blank"></a>
-			<p class="list-group-item-text" data-ng-bind="linky.description"></p>
-			<div class="pull-right" data-ng-show="authentication.user._id == linky.user._id">
-				<a class="btn" href="/#!/linkies/{{linky._id}}/edit">
-					<i class="glyphicon glyphicon-edit"></i>
-				</a>
-				<a class="btn" data-ng-click="remove(linky);">
-					<i class="glyphicon glyphicon-trash"></i>
-				</a>
-			</div>
-		</div>
-
-	</div>
-	<div class="alert alert-warning text-center" data-ng-if="linkies.$resolved && !linkies.length">
-		No linkies yet, why don't you <a href="/#!/linkies/create">create one</a>?
-	</div>
+	<linky-list></linky-list>
+	
 
 </section>
