--- a/public/modules/linkies/views/create-linky.client.view.html
+++ b/public/modules/linkies/views/create-linky.client.view.html
@@ -1,9 +1,9 @@
 <section data-ng-controller="LinkiesController">
 	<div class="page-header">
-		<h1>New Linky</h1>
+		<h1>{{messageAdd}}</h1>
 	</div>
 	<div class="col-md-12">
-		<form name="linkyForm" class="form-horizontal" data-ng-submit="create()" novalidate>
+		<form name="linkyForm" class="form-horizontal" data-ng-submit="submit()" novalidate>
 			<fieldset>
 				<div class="form-group" ng-class="{ 'has-error': linkyForm.title.$dirty && linkyForm.title.$invalid }">
 					<label class="control-label" for="title">Title</label>
