--- a/public/modules/linkies/css/linkies.css
+++ b/public/modules/linkies/css/linkies.css
@@ -27,7 +27,7 @@
 }
 
 .add-linky-wrapper .form-add-linky {
-	padding: 0	30px 0 30px;
+	padding: 5px	30px 0 30px;
 	overflow: hidden;
 	background-color: rgb(0, 0, 0);
 	background-color: rgba(0, 0, 0, 0.3);
