--- a/public/modules/core/views/about.client.view.html
+++ b/public/modules/core/views/about.client.view.html
@@ -3,6 +3,7 @@
 		<h1>About</h1>
 	</div>
 	<div class="col-md-12">
-		<p>Made by <a href="http://www.pablolarvor.fr">Pablo Larvor</a></p>
+		<p>Made by <a href="http://www.pablolarvor.fr">Pablo Larvor</a> in September 2015</p>
+		<p>Leave me a message @ <a href="mailto:pablo.larvor@gmail.com">pablo.larvor@gmail.com</a></p>
 	</div>
 </section>
